# langchain-moorcheh

./: Makefile  README.md  pyproject.toml
.github/scripts/: check_diff.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
docs/: chat.ipynb  document_loaders.ipynb  llms.ipynb  provider.ipynb  retrievers.ipynb  stores.ipynb  text_embedding.ipynb  toolkits.ipynb  tools.ipynb  vectorstores.ipynb
langchain_moorcheh/: __init__.py  vector_store.py  vectorstores.py
libs/moorcheh/: .gitignore  Makefile  README.md  pyproject.toml
libs/moorcheh/langchain_moorcheh/: __init__.py  vectorstores.py
libs/moorcheh/scripts/: validate_release.py
libs/moorcheh/tests/integration_tests/: test_vectorstores.py
libs/moorcheh/tests/unit_tests/: test_vector_stores.py
tests/: test_vector_stores.py
tests/integration_tests/: test_vectorstores.py
tests/unit_tests/: test_vector_stores.py
