[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-moorcheh"
version = "0.1.0"
description = "LangChain integration for the Moorcheh vector database"
authors = [
  { name = "EdgeAI Innovations" },
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "moorcheh-sdk>=0.1.0,<2.1.0",
  "langchain-core>=0.1.0,<1.0.0",
]

[project.urls]
Homepage = "https://moorcheh.ai"
Source = "https://github.com/moorcheh-ai/moorcheh-langchain-integration"

[tool.hatch.build.targets.sdist]
include = ["langchain_moorcheh/"]

[tool.hatch.build.targets.wheel]
include = ["langchain_moorcheh/"]

[dependency-groups]
dev = [
  "ipython==8.10.0",
  "jupyter>=1.0.0,<2",
  "mypy==0.991",
  "pre-commit==3.2.0",
  "pylint==2.15.10",
  "pytest==7.2.1",
  "pytest-mock==3.11.1",
  "ruff==0.11.11",
  "types-Deprecated>=0.1.0",
  "types-PyYAML>=6.0.12.12,<7",
  "types-requests==2.28.11.8",
  "types-setuptools==67.1.0.0",
  "black[jupyter]<=23.9.1,>=23.7.0",
  "codespell[toml]>=2.2.6",
  "diff-cover>=9.2.0",
  "pytest-cov>=6.1.1",
]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
python_version = "3.8"
